# ComfyUI-NKD-Sigmas-Curve

./: .gitignore  LICENSE  README.md  __init__.py  nkd_sigma_curve.py  package-lock.json  package.json  pyproject.toml  tsconfig.json  vite.config.ts
.github/workflows/: publish.yml
src/: SigmaCurveWidget.vue  main.ts
web/: nkd_sigma_curve.js  nkd_sigmas_curve.js
